--- a/.github/workflows/nix-checks.yml
+++ b/.github/workflows/nix-checks.yml
@@ -5,7 +5,17 @@ on:
       - main
 
 jobs:
-  nix-checks:
+  "Nix flake check":
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - uses: DeterminateSystems/nix-installer-action@main
+    - uses: DeterminateSystems/magic-nix-cache-action@main
+    - name: "Run nix flake check"
+      run: nix flake check
+
+  "Build package":
     strategy:
       matrix:
         snowcliVer: ["1x", "2x"]
@@ -16,8 +26,6 @@ jobs:
     - uses: actions/checkout@v3
     - uses: DeterminateSystems/nix-installer-action@main
     - uses: DeterminateSystems/magic-nix-cache-action@main
-    - name: "Run nix flake check"
-      run: nix flake check
     - name: "Build Snowcli {{ matrix.snowcliVer }}"
       run: nix build .#snowcli-{{ matrix.snowcliVer }}
     - name: "Run sample Snowcli command"
