ci: remove testing for snowcli-1x

--- a/.github/workflows/nix-checks.yml
+++ b/.github/workflows/nix-checks.yml
@@ -19,7 +19,7 @@ jobs:
   build-package:
     strategy:
       matrix:
-        snowcliVer: ["1x", "2x"]
+        snowcliVer: ["2x"]
 
     runs-on: ubuntu-latest
 
