ci: add 3x to the matrix

--- a/.github/workflows/nix-checks.yml
+++ b/.github/workflows/nix-checks.yml
@@ -19,7 +19,7 @@ jobs:
   build-package:
     strategy:
       matrix:
-        snowcliVer: ["2x"]
+        snowcliVer: ["2x", "3x"]
 
     runs-on: ubuntu-latest
 
